test case comments updated

--- a/examples/Test_case_with_N_halos.ipynb
+++ b/examples/Test_case_with_N_halos.ipynb
@@ -36,7 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's create fake halo catalogs containing 100 halos with final masses Mh=1e12 at z =6 and growing exponentially"
+    "### Create a fake halo catalogs\n",
+    "Let us a create fake halo catalogs containing 100 halos with final masses $M_h=10^{12} M_\\mathrm{sun}$ at $z=6$ that have been growing exponentially."
    ]
   },
   {
@@ -1363,22 +1364,14 @@
     "ax4.legend(loc='best',fontsize=15)\n",
     "\n",
     "ax2.axes.get_xaxis().set_visible(False)\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## dTb Lightcones"
+    "## Differetntial brightness temperature Lightcones"
    ]
   },
   {
@@ -1457,7 +1450,7 @@
     }
    },
    "source": [
-    "## xHII Lightcones\n"
+    "## Ionization fraction Lightcones\n"
    ]
   },
   {
