--- a/examples/Test_case_with_N_halos.ipynb
+++ b/examples/Test_case_with_N_halos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple test case with N halos"
+    "# Simple toy case with N halos"
    ]
   },
   {
