--- a/docs/examples/beorn_example1.ipynb
+++ b/docs/examples/beorn_example1.ipynb
@@ -5,7 +5,7 @@
    "id": "d0b518e7",
    "metadata": {},
    "source": [
-    "# BEORN coupled to 21cmFast"
+    "# BEoRN coupled to 21cmFast"
    ]
   },
   {
@@ -65,10 +65,10 @@
    "outputs": [],
    "source": [
     "# cosmology\n",
-    "param.cosmo.Om = 0.31\n",
+    "param.cosmo.Om = 0.315\n",
     "param.cosmo.Ob = 0.045\n",
-    "param.cosmo.Ol = 0.69\n",
-    "param.cosmo.h  = 0.68\n",
+    "param.cosmo.Ol = 0.685\n",
+    "param.cosmo.h  = 0.673\n",
     "param.cosmo.ps = '../../examples/PCDM_Planck.dat'\n",
     "param.cosmo.corr_fct = '../../examples/corr_fct.dat'"
    ]
@@ -89,11 +89,11 @@
    "outputs": [],
    "source": [
     "# lyman-alpha photons\n",
-    "param.source.N_al = 9690#1500\n",
+    "param.source.N_al = 9690 #1500\n",
     "param.source.alS_lyal = 0.0\n",
     "\n",
     "# ionising photons\n",
-    "param.source.Nion = 3000     #5000\n",
+    "param.source.Nion = 3000 #5000\n",
     "\n",
     "# X-ray photons\n",
     "param.source.E_min_xray = 500\n",
@@ -112,9 +112,9 @@
     "param.source.g1 = 0.49\n",
     "param.source.g2 = -0.61\n",
     "param.source.g3 = 4\n",
-    "param.source.g4= -4\n",
-    "param.source.Mp= 1.6e11 * param.cosmo.h\n",
-    "param.source.Mt= 1e9\n",
+    "param.source.g4 = -4\n",
+    "param.source.Mp = 1.6e11 * param.cosmo.h\n",
+    "param.source.Mt = 1e9\n",
     "\n",
     "# Minimum star forming halo\n",
     "param.source.M_min= 1e8"
